# s5table

./: Cargo.toml  Dockerfile  README.md
src/: gcs.rs  lib.rs  main.rs  s3.rs
