[package]
name = "s5table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.4.0"
http = "0.2.6"
aws-sdk-s3 = "0.4.0"
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"
sstable = { git = "https://github.com/fbergen/sstable", branch="master" }
cloud-storage = { version = "0.11.0-rc.1" , git = "https://github.com/fbergen/cloud-storage-rs" }
rocket = {version = "0.5.0-rc.1"}
rocket_cors = "0.6.0-alpha1"
